--- a/relazione.tex
+++ b/relazione.tex
@@ -45,6 +45,7 @@
 
 \title{Relazione d'esame di Reti Complesse}
 \author{Carlo Emilio Montanari}
+\date{5 dicembre 2018}
 
 \begin{document}
 
@@ -175,10 +176,6 @@ Questo lo si può ricavare moltiplicando entrambi i termini dell'equazione algeb
     D^{-1} A \vb{x} = \mu\vb{x}
 \end{equation}
 Si ha da evidenziare che \(D^{-1} A\) è anche nota come \textit{Transition Matrix} di una random walk sul grafo G. Ergo, la degree-normalized eigen-projection fa uso dei primi autovettori della Transition Matrix per eseguire il disegno del grafo.
-
-% TODO: note su performance note da paper per questo metodo noto.
-
-\subsection{Alcuni esempi}\label{subsec:drawing_examples}
 
 \section{Ricostruzione di un grafo tramite perturbazioni del Laplaciano}\label{sec:perturbazioni}
 
@@ -432,7 +429,7 @@ Si riportano inoltre in Figura~\ref{fig:lattice_5_comparison} dei grafici riport
 
 \begin{figure}[p]
     \centering
-    \includegraphics[width=0.7\textwidth]{img/lattice_5.png}
+    \includegraphics[width=0.7\textwidth]{img/lattice_5.jpg}
     \caption{Performance ottenute per un lattice quadrato bidimensionale di dimensione \(5 \times 5\). Deviazione standard calcolata su 12 esecuzioni distinte.}\label{fig:lattice_5_performance}
 \end{figure}
 
@@ -475,7 +472,7 @@ Si riportano in Figura~\ref{fig:lattice_10_comparison} i grafici riportanti il r
 
 \begin{figure}[p]
     \centering
-    \includegraphics[width=0.7\textwidth]{img/lattice_5.png}
+    \includegraphics[width=0.7\textwidth]{img/lattice_10.jpg}
     \caption{Performance ottenute per un lattice quadrato bidimensionale di dimensione \(10 \times 10\). Deviazione standard calcolata su 12 esecuzioni distinte.}\label{fig:lattice_10_performance}
 \end{figure}
 
@@ -520,7 +517,7 @@ Si riportano in Figura~\ref{fig:lattice_20_comparison} i grafici riportanti il r
 
 \begin{figure}[p]
     \centering
-    \includegraphics[width=0.7\textwidth]{img/lattice_5.png}
+    \includegraphics[width=0.7\textwidth]{img/lattice_20.jpg}
     \caption{Performance ottenute per un lattice quadrato bidimensionale di dimensione \(20 \times 20\).}\label{fig:lattice_20_performance}
 \end{figure}
 
